--- a/frontend/src/app/components/admin/dashboard/home/home.component.scss
+++ b/frontend/src/app/components/admin/dashboard/home/home.component.scss
@@ -1,40 +1,4 @@
-@import '~src/scss/variables';
-.location-icon {
-  color: $primary-color;
-}
-
-
-:host ::ng-deep .mat-card-header-text {
-  width: 100%;
-  text-align: right;
-}
-
-.icon-lg {
-  font-size: 40px;
-}
-
-.mat-card {
-  color: #fff;
-  .mat-card-header {
-    width: 100%;
-  }
-  .mat-card-title {
-    font-size: 40px !important;
-  }
-  .mat-card-subtitle {
-    color: #fff;
-    white-space: nowrap;
-  }
-  &.danger {
-    background: linear-gradient(60deg, #ec4040, #d41414);
-  }
-  &.warn {
-    background: linear-gradient(60deg, #ffa726, #fb8c00);
-  }
-  &.success {
-    background: linear-gradient(60deg, #66bb6a, #43a047);
-  }
-  &.info {
-    background: linear-gradient(60deg, #26c6da, #00acc1);
-  }
-}
+#dashboard{position:relative; margin-left: 84px;top: 0;}
+#dashboard .wrap-dashboard{padding: 16px 10px 22px;position:relative;}
+#dashboard .wrap-dashboard .title{font-size:28px;color:#333333;font-weight: 600;}
+#dashboard .wrap-dashboard::before{content:"";position:absolute;bottom:0;width: 70%;height: 1px;background:#c7cdd1;}
