--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -6,5 +6,12 @@
 @import './scss/variables';
 @import './scss/theme';
 @import "~leaflet/dist/leaflet.css";
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
