--- a/frontend/src/app/components/admin/dashboard/home/home.component.html
+++ b/frontend/src/app/components/admin/dashboard/home/home.component.html
@@ -5,5 +5,15 @@
                 <div class="title">Dashboard</div>
             </div>
         </div>
+        <div class="container">
+            <div div class="subject">
+                <div class="subject-img">
+                    Imagem
+                </div>
+                <div class="subject-info">
+                    Base de Dados Avançadas
+                </div>
+            </div>
+        </div>
     </div>
 </main>
