--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -6,6 +6,62 @@
 @import './scss/variables';
 @import './scss/theme';
 @import "~leaflet/dist/leaflet.css";
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 900;
+    src: url(./assets/fonts/FontinSans/Lato-Black.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    src: url(./assets/fonts/FontinSans/Lato-Bold.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 600;
+    src: url(./assets/fonts/FontinSans/Lato-Semibold.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 500;
+    src: url(./assets/fonts/FontinSans/Lato-Medium.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: url(./assets/fonts/FontinSans/Lato-Regular.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    src: url(./assets/fonts/FontinSans/Lato-Light.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 100;
+    src: url(./assets/fonts/FontinSans/Lato-Thin.woff) format('woff');
+}
+
+
+.container{max-width: 1470px;padding: 0 15px;}
+.title{font-family: 'Lato',sans-serif;}
+p{font-family: 'Lato',sans-serif;font-size: 14px;line-height:14px;font-weight: 400;}
+
+
 html,
 body {
     height: 100%;
