--- a/frontend/src/app/components/admin/dashboard/subject-dashboard/subject-dashboard.component.scss
+++ b/frontend/src/app/components/admin/dashboard/subject-dashboard/subject-dashboard.component.scss
@@ -1,20 +1,35 @@
-#dashboard {
+#subject-dashboard {
     position: relative;
     top: 0;
 }
 
-#dashboard .wrap-dashboard {
+#subject-dashboard .wrap-dashboard{
+    display: flex;
+    align-items: center;
     padding: 16px 10px 22px;
     position: relative;
 }
 
-#dashboard .wrap-dashboard .title {
+#subject-dashboard .wrap-dashboard .btn-back{
+    cursor: pointer;
+}
+
+#subject-dashboard .wrap-dashboard .title{
+    margin-left: 30px;
+}
+
+#subject-dashboard .wrap-subject-dashboard {
+    padding: 16px 10px 22px;
+    position: relative;
+}
+
+#subject-dashboard .wrap-subject-dashboard .title {
     font-size: 28px;
     color: #333333;
     font-weight: 600;
 }
 
-#dashboard .wrap-dashboard::before {
+#subject-dashboard .wrap-subject-dashboard::before {
     content: "";
     position: absolute;
     bottom: 0;
@@ -23,7 +38,7 @@
     background: #c7cdd1;
 }
 
-#dashboard .subject {
+#subject-dashboard .subject {
     width: 100%;
     max-width: 262px;
     height: 100%;
@@ -34,38 +49,38 @@
     border-radius: 4px;
 }
 
-#dashboard .subject:hover {
+#subject-dashboard .subject:hover {
     box-shadow: 0 4px 10px rgb(0 0 0 / 35%);
 }
 
-#dashboard .subject .subject-img {
+#subject-dashboard .subject .subject-img {
     height: 146px;
     text-align: center;
 }
 
-#dashboard .subject .subject-info {
+#subject-dashboard .subject .subject-info {
     height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#dashboard .subject .subject-img .svg-img {
+#subject-dashboard .subject .subject-img .svg-img {
     border-radius: 4px;
     height: 100%;
 }
 
-#dashboard .subject .subject-img .background-image {
+#subject-dashboard .subject .subject-img .background-image {
     background-image: url("https://inst-fs-dub-prod.inscloudgate.net/files/2e49e2c0-2038-42ef-9464-748866152bb1/FCT.jpg?download=1&token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJpYXQiOjE2NTIxNjg1NDAsInVzZXJfaWQiOm51bGwsInJlc291cmNlIjoiL2ZpbGVzLzJlNDllMmMwLTIwMzgtNDJlZi05NDY0LTc0ODg2NjE1MmJiMS9GQ1QuanBnIiwianRpIjoiNDM2ODk1ZDktZWE0ZS00ZWIzLWEyZjctYTM2MzhkM2FhMTdlIiwiaG9zdCI6bnVsbCwiZXhwIjoxNjUyNzczMzQwfQ.6sP4PWj8F8EZ3gaJ9tx63LDaV6B8qhBg2UYj9I-A_0SifWzpolxY1aWJwYhHyRJgnCtNzfIteQ90fhwSt5DN0g&geometry=524x292&format=webp");
 }
 
-#dashboard .subject .subject-img .background-add-subject {
+#subject-dashboard .subject .subject-img .background-add-subject {
     background-size: 110px;
     filter: invert(59%) sepia(12%) saturate(2635%) hue-rotate(77deg) brightness(97%) contrast(81%);
     background-image: url("data:image/svg+xml,%3c%3fxml version='1.0' encoding='UTF-8' standalone='no'%3f%3e %3csvg xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' xmlns:rdf='http://www.w3.org/1999/02/22-rdf-syntax-ns%23' xmlns='http://www.w3.org/2000/svg' xmlns:dc='http://purl.org/dc/elements/1.1/' xmlns:ns1='http://sozi.baierouge.fr' xmlns:cc='http://web.resource.org/cc/' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd' id='svg1' sodipodi:docname='edit_add.svg' viewBox='0 0 60 60' sodipodi:version='0.32' _SVGFile__filename='oldscale/actions/edit_add.svg' version='1.0' y='0' x='0' inkscape:version='0.40' sodipodi:docbase='/home/danny/work/flat/SVG/mono/scalable/actions'%3e%3csodipodi:namedview id='base' bordercolor='%23666666' inkscape:pageshadow='2' inkscape:window-y='0' pagecolor='white' inkscape:window-height='699' inkscape:zoom='2.2997497' inkscape:window-x='0' borderopacity='1.0' inkscape:current-layer='svg1' inkscape:cx='61.037632' inkscape:cy='35.701265' inkscape:window-width='1024' inkscape:pageopacity='0.0'/%3e%3cpath id='path1092' style='stroke-linejoin:round%3bstroke:white%3bstroke-linecap:round%3bstroke-width:5%3bfill:none' d='m23.78 23.78v-13.999c0-1.9588 0.536-3.55 1.607-4.7741 1.071-1.2546 2.601-1.8819 4.59-1.8819s3.519 0.6273 4.59 1.8819c1.102 1.2241 1.653 2.8153 1.653 4.7737v13.999h13.816c2.019 0 3.611 0.551 4.773 1.653 1.194 1.071 1.791 2.586 1.791 4.544 0 1.989-0.597 3.534-1.791 4.636-1.162 1.102-2.754 1.652-4.773 1.652h-13.816v13.954c0 1.989-0.551 3.596-1.653 4.82-1.101 1.224-2.632 1.836-4.59 1.836s-3.488-0.612-4.59-1.836c-1.071-1.224-1.607-2.831-1.607-4.82v-13.954h-13.816c-1.9582 0-3.5494-0.596-4.7735-1.79-1.1934-1.224-1.7901-2.723-1.7901-4.498 0-1.958 0.5814-3.473 1.7442-4.544 1.1935-1.102 2.8-1.653 4.8196-1.653h13.816z'/%3e%3cpath id='path837' style='fill:black' d='m23.78 23.78v-13.999c0-1.9588 0.536-3.55 1.607-4.7741 1.071-1.2546 2.601-1.8819 4.59-1.8819s3.519 0.6273 4.59 1.8819c1.102 1.2241 1.653 2.8153 1.653 4.7737v13.999h13.816c2.019 0 3.611 0.551 4.773 1.653 1.194 1.071 1.791 2.586 1.791 4.544 0 1.989-0.597 3.534-1.791 4.636-1.162 1.102-2.754 1.652-4.773 1.652h-13.816v13.954c0 1.989-0.551 3.596-1.653 4.82-1.101 1.224-2.632 1.836-4.59 1.836s-3.488-0.612-4.59-1.836c-1.071-1.224-1.607-2.831-1.607-4.82v-13.954h-13.816c-1.9582 0-3.5494-0.596-4.7735-1.79-1.1934-1.224-1.7901-2.723-1.7901-4.498 0-1.958 0.5814-3.473 1.7442-4.544 1.1935-1.102 2.8-1.653 4.8196-1.653h13.816z'/%3e%3cmetadata%3e%3crdf:RDF%3e%3ccc:Work%3e%3cdc:format%3eimage/svg%2bxml%3c/dc:format%3e%3cdc:type rdf:resource='http://purl.org/dc/dcmitype/StillImage'/%3e%3ccc:license rdf:resource='http://creativecommons.org/licenses/publicdomain/'/%3e%3cdc:publisher%3e%3ccc:Agent rdf:about='http://openclipart.org/'%3e%3cdc:title%3eOpenclipart%3c/dc:title%3e%3c/cc:Agent%3e%3c/dc:publisher%3e%3c/cc:Work%3e%3ccc:License rdf:about='http://creativecommons.org/licenses/publicdomain/'%3e%3ccc:permits rdf:resource='http://creativecommons.org/ns%23Reproduction'/%3e%3ccc:permits rdf:resource='http://creativecommons.org/ns%23Distribution'/%3e%3ccc:permits rdf:resource='http://creativecommons.org/ns%23DerivativeWorks'/%3e%3c/cc:License%3e%3c/rdf:RDF%3e%3c/metadata%3e%3c/svg%3e");
 }
 
-#dashboard .wrap-subject {
+#subject-dashboard .wrap-subject {
     display: flex;
     flex-wrap: wrap;
     height: 100%;
