--- a/frontend/src/app/components/admin/dashboard/add-presentation/add-presentation.component.html
+++ b/frontend/src/app/components/admin/dashboard/add-presentation/add-presentation.component.html
@@ -2,7 +2,7 @@
     <form>
         <div class="wrap-add-presentation">
             <input type="text" id="presentationName" name="presentationName" [(ngModel)]="presentationName" type="text" placeholder="Insira o nome da Apresentação">
-            <input type="file" class="file-upload" onchange="console.log(event.target.files)">
+            <input type="file" class="file-upload" (change)="getPdf($event.target.files)">
             <div class="number-questions">
                 <mat-form-field appearance="fill">
                     <mat-label>Numero de Perguntas</mat-label>
@@ -21,10 +21,28 @@
                 </mat-form-field>
             </div>
             <div class="question-input-n-response" *ngIf="questionsNumber != ''">
-                <div *ngFor='let in of counter(questionsNumber);let i = index'>
+                <div class="flex" *ngFor='let in of counter(questionsNumber);let i = index'>
                     <div class="wrap-responses">
                         <input type="text" id="question{{i}}" name="question{{i}}" placeholder="Insira a Pergunta">
-                        <div class="svg-img arrow-down"></div>
+                        <select type="number" class="select-responses" [(ngModel)]="selectResponses" (ngModelChange)="responsesSelect(i)" [ngModelOptions]="{standalone: true}">
+                            <option [ngValue]="2" value="2" >2</option>
+                            <option [ngValue]="3" value="3" >3</option>
+                            <option [ngValue]="4" value="4" >4</option>
+                            <option [ngValue]="5" value="5" >5</option>
+                            <option [ngValue]="6" value="6" >6</option>
+                            <option [ngValue]="7" value="7" >7</option>
+                            <option [ngValue]="8" value="8" >8</option>
+                        </select>
+                    </div>
+
+                    <div class="responses-inputs flex" *ngIf="questionIdAndRespondes.length > 0 && i == questionIdAndRespondes[i].id">
+                        <div *ngFor='let in of counter(questionIdAndRespondes[i].n);let j = index'>
+                            <input type="text" id="response{{i}}{{j}}" name="response{{j}}" placeholder="Insira a Resposta">
+                        </div>
+                        <select type="number" class="correct-response" [(ngModel)]="varCorrectResponses" (ngModelChange)="correctResponse(i)" [ngModelOptions]="{standalone: true}">
+                            <option *ngFor='let in of counter(questionIdAndRespondes[i].n);let j = index' [ngValue]="j">{{j+1}}</option>
+                        </select>
+
                     </div>
                 </div>
             </div>
