--- a/frontend/src/app/components/admin/dashboard/add-presentation/add-presentation.component.scss
+++ b/frontend/src/app/components/admin/dashboard/add-presentation/add-presentation.component.scss
@@ -44,9 +44,34 @@
 .wrap-presentation .wrap-add-presentation .question-input-n-response .flex{
     display: flex;
     align-items: center;
+    margin-left: 20px;
 }
 
 .wrap-presentation .btn-add-presentation{
     margin-top: 20px;
     text-align: center;
+}
+
+#presentationName{
+    padding: 6px 30px 6px 8px;
+}
+
+.wrap-presentation .wrap-add-presentation .file-upload{
+    margin-left: 20px;
+}
+
+.wrap-presentation .wrap-add-presentation .number-questions{
+    margin-top: 20px;
+}
+
+.wrap-presentation .wrap-add-presentation .question-input-n-response > .flex.ng-star-inserted:not(:first-child){
+    margin-top:15px;
+}
+
+.wrap-presentation .wrap-add-presentation .question-input-n-response .flex.ng-star-inserted .responses-inputs .ng-star-inserted:not(:first-child){
+    margin-left: 20px;
+}
+
+.wrap-presentation .wrap-add-presentation .question-input-n-response select.correct-response{
+    margin-left: 20px;
 }
